--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "lib": ["esnext","DOM"],
+    "lib": ["es6","DOM"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
