feat:trigger & types fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "module": "esnext",
     "lib": ["es6","DOM"],
+    "downlevelIteration": true,
     "moduleResolution": "node",
     "noImplicitAny": true,
     "esModuleInterop": true,
