--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "^8.18.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
+    "rollup": "^2.75.7",
     "typescript": "^4.7.4",
     "unbuild": "^0.7.4",
     "vite": "^2.9.12",
