--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "rimraf dist && unbuild",
+    "build": "rollup -c rollup.config.ts",
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.1",
     "@babel/types": "^7.18.4",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
     "eslint": "^8.18.0",
