--- a/package.json
+++ b/package.json
@@ -18,48 +18,42 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "types": "./lib/index.d.ts",
+      "require": "./lib/index.cjs",
+      "import": "./lib/index.mjs"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.mjs",
+  "types": "./lib/index.d.ts",
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
+        "./lib/*",
+        "./lib/index.d.ts"
       ]
     }
   },
   "files": [
-    "dist"
+    "lib"
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "rollup -c rollup.config.ts",
-    "dev": "unbuild --stub",
+    "build": "vite build",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp --commit --push --tag && pnpm publish",
-    "start": "esno src/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.1",
     "@babel/types": "^7.18.4",
-    "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
     "eslint": "^8.18.0",
-    "esno": "^0.16.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.75.7",
     "typescript": "^4.7.4",
-    "unbuild": "^0.7.4",
     "vite": "^2.9.12",
     "vitest": "^0.15.2"
   }
