--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "bugs": {
     "url": "https://github.com/love-js/view/issues"
   },
-  "keywords": ["vue"],
+  "keywords": [
+    "vue"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -38,6 +40,7 @@
     "lib"
   ],
   "scripts": {
+    "addExample": "esno ./scripts/addExample.ts",
     "preinstall": "npx only-allow pnpm",
     "build": "vite build",
     "lint": "eslint .",
@@ -52,6 +55,7 @@
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
     "eslint": "^8.18.0",
+    "esno": "^0.16.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
