--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "eslint": "^8.18.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
     "vitest": "^0.15.2"
