--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "exports": {
     ".": {
       "types": "./lib/index.d.ts",
-      "require": "./lib/view.cjs.js",
-      "import": "./lib/view.es.js"
+      "require": "./lib/index.cjs",
+      "import": "./lib/index.mjs"
     }
   },
-  "main": "./lib/view.cjs.js",
-  "module": "./lib/view.es.js",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
   "typesVersions": {
     "*": {
@@ -42,7 +42,7 @@
   "scripts": {
     "addExample": "esno ./scripts/addExample.ts",
     "preinstall": "npx only-allow pnpm",
-    "build": "vite build",
+    "build": "unbuild",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp --commit --push --tag && pnpm publish",
@@ -60,7 +60,8 @@
     "rollup-plugin-typescript2": "^0.32.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
+    "unbuild": "^0.7.4",
     "vite": "^2.9.12",
-    "vitest": "^0.15.2"
+    "vitest": "^0.18.0"
   }
 }
