--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "bugs": {
     "url": "https://github.com/love-js/view/issues"
   },
-  "keywords": ["vue"],
+  "keywords": [
+    "vue"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -47,14 +49,14 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.1",
-    "@babel/types": "^7.18.4",
+    "@antfu/eslint-config": "^0.25.2",
+    "@babel/types": "^7.18.9",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.20.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
-    "vite": "^2.9.12",
+    "vite": "^2.9.14",
     "vitest": "^0.15.2"
   }
 }
