--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.1",
+    "@antfu/eslint-config": ">=0.25.1",
     "@babel/types": "^7.18.4",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
@@ -62,6 +62,6 @@
     "typescript": "^4.7.4",
     "unbuild": "^0.7.4",
     "vite": "^2.9.12",
-    "vitest": "^0.18.0"
+    "vitest": ">=0.18.0"
   }
 }
