--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": ">=0.25.1",
-    "@babel/types": "^7.18.4",
+    "@antfu/eslint-config": "^0.35.1",
+    "@babel/types": "^7.20.7",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.33.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "unbuild": "^0.7.4",
-    "vite": "^2.9.12",
-    "vitest": ">=0.18.0"
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "unbuild": "^0.7.6",
+    "vite": "^2.9.15",
+    "vitest": "^0.28.3"
   }
 }
