--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "addExample": "esno ./scripts/addExample.ts",
     "preinstall": "npx only-allow pnpm",
-    "build": "unbuild",
+    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp --commit --push --tag && pnpm publish",
@@ -52,15 +52,16 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.3",
     "@babel/types": "^7.22.5",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
     "eslint": "^8.46.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
+    "rollup": "^3.27.1",
     "rollup-plugin-typescript2": "^0.32.1",
     "tslib": "^2.6.1",
     "typescript": "^4.9.5",
-    "unbuild": "^1.2.1",
     "vite": "^4.4.8",
     "vitest": "^0.34.1"
   }
